--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.19",
+    "@reduxjs/toolkit": "^2.10.1",
     "axios": "^1.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1"
   },
